--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Broken/RadScheduleView/RadScheduleView_Demo.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Broken/RadScheduleView/RadScheduleView_Demo.xaml
@@ -1,9 +1,9 @@
 ﻿<UserControl
-    x:Class="OpenSilver.Samples.TelerikUI.RadComboBox_Demo"
+    x:Class="OpenSilver.Samples.TelerikUI.RadScheduleView_Demo"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:OpenSilver.Samples.TelerikUI"
-    xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation">
+    xmlns:controls="using:Telerik.Windows.Controls"
+    xmlns:local="clr-namespace:OpenSilver.Samples.TelerikUI">
 
     <ContentControl Style="{StaticResource Card_Style}" Height="210" Width="180">
         <Grid>
@@ -12,15 +12,9 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <ContentControl Content="Rad ComboBox" Foreground="#FFFF799C" Background="#FFC69EA9" Style="{StaticResource HeaderControl_Style}"/>
+            <ContentControl Content="Rad Button" Foreground="#FFD59851" Background="#FFBFA383" Style="{StaticResource HeaderControl_Style}"/>
             <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <telerik:RadComboBox x:Name="LanguagesComboBox" Margin="2"
-							DisplayMemberPath="DisplayName" ItemsSource="{Binding Languages}"
-							SelectedItem="{Binding SelectedLanguage, Mode=TwoWay}"
-                             SelectionChanged="LanguagesComboBox_SelectionChanged"
-                             Width="150"
-                             Height="40"
-							/>
+                <controls:RadScheduleView  Width="150"/>
             </StackPanel>
 
             <Button Grid.Row="2" Content="VIEW SOURCE..." Click="ButtonViewSource_Click" Background="#FF6F7DFF" Style="{StaticResource ButtonViewSource_Style}"/>
