--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Broken/Broken.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Broken/Broken.xaml
@@ -8,10 +8,28 @@
         <TextBlock Text="Broken Controls" Style="{StaticResource PageHeader_Style}"/>
         <local:MasonryPanelWithProgressiveLoading Style="{StaticResource Panel_Style}">
             <local:GroupBox_Demo HorizontalAlignment="Center"/>
+            <local:RadColorPicker_Demo HorizontalAlignment="Center"/>
+            <local:RadListBox_Demo HorizontalAlignment="Center"/>
+            <local:RadGallery_Demo HorizontalAlignment="Center"/>
+            <local:RadTimePicker_Demo HorizontalAlignment="Center"/>
+            <local:RadWrapPanel_Demo HorizontalAlignment="Center"/>
+            <local:RadCalendar_Demo HorizontalAlignment="Center"/>
+            <local:RadToolBar_Demo HorizontalAlignment="Center"/>
+            <local:RadAlert_Demo HorizontalAlignment="Center"/>
+            <!--<local:RadCartesianChart_Demo HorizontalAlignment="Center"/>-->
+            <!--<local:RadTreeListView_Demo HorizontalAlignment="Center"/>-->
+            <!--<local:RadScheduleView_Demo HorizontalAlignment="Center"/>-->
+            <!--<local:RadMap_Demo HorizontalAlignment="Center"/>-->
+            <local:RadTreeView_Demo HorizontalAlignment="Center"/>
+
             <local:RadSplitButton_Demo HorizontalAlignment="Center"/>
             <local:RadTabControl_Demo HorizontalAlignment="Center"/>
+            <!--The RadRichTextBox below is commented because it has an exception in the constructor which breaks this entire page.-->
+            <!--<local:RadRichTextBox_Demo HorizontalAlignment="Center"/>-->
+            <local:RadPanelBar_Demo HorizontalAlignment="Center"/> 
             <local:RadToggleSwitchButton_Demo HorizontalAlignment="Center"/>
-            <local:RadGridView_Demo HorizontalAlignment="Center"/>
+            <local:RadDatePicker_Demo HorizontalAlignment="Center"/>
+            <!--<local:RadGridView_Demo HorizontalAlignment="Center"/>-->
         </local:MasonryPanelWithProgressiveLoading>
     </StackPanel>
 </UserControl>
