--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/InProgress/RadDocking/RadDocking_Demo.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/InProgress/RadDocking/RadDocking_Demo.xaml
@@ -14,8 +14,21 @@
             </Grid.RowDefinitions>
             <ContentControl Content="Rad Docking" Foreground="#FF6F7DFF" Background="#FF9A9FCE" Style="{StaticResource HeaderControl_Style}"/>
             <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <controls:RadDocking x:Name="radDocking" Width="150" Height="200">
-                    <TextBlock Text="Some simple text here"></TextBlock>
+                <controls:RadDocking>
+                    <controls:RadDocking Width="300" Height="200">
+                        <controls:RadDocking.DocumentHost>
+                            <controls:RadSplitContainer>
+                                <controls:RadPaneGroup>
+                                    <controls:RadPane Header="Description">
+                                        <TextBlock TextWrapping="Wrap" Text="On the Documents tab above press Ctrl + Mouse Left button to display the Popup Menu. You can use the same combination on every tab."/>
+                                    </controls:RadPane>
+                                    <controls:RadPane Header="NonDraggable" CanFloat="False">
+                                        <TextBlock TextWrapping="Wrap" Text="This pane cannot be dragged, because it has its property CanFloat set 'False'."/>
+                                    </controls:RadPane>
+                                </controls:RadPaneGroup>
+                            </controls:RadSplitContainer>
+                        </controls:RadDocking.DocumentHost>
+                    </controls:RadDocking>
                 </controls:RadDocking>
             </StackPanel>
 
