--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Supported/RadListBox/RadListBox_Demo.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Supported/RadListBox/RadListBox_Demo.xaml
@@ -1,9 +1,8 @@
 ﻿<UserControl
-    x:Class="OpenSilver.Samples.TelerikUI.RadTabControl_Demo"
+    x:Class="OpenSilver.Samples.TelerikUI.RadListBox_Demo"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:Telerik.Windows.Controls"
-           xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
     xmlns:local="clr-namespace:OpenSilver.Samples.TelerikUI">
 
     <ContentControl Style="{StaticResource Card_Style}" Height="210" Width="180">
@@ -13,14 +12,16 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <ContentControl Content="Rad Tab Control" Foreground="#FFF78069" Background="#FFDCA59C" Style="{StaticResource HeaderControl_Style}"/>
+            <ContentControl Content="Rad ListBox" Foreground="#FFD59851" Background="#FFBFA383" Style="{StaticResource HeaderControl_Style}"/>
             <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <controls:RadTabControl telerik:StyleManager.Theme="Windows8">
-                    <controls:RadTabControl.Items>
-                        <controls:RadTabItem Header="Tab 1" Content="Item 1" Width="30" Height="18"/>
-                        <controls:RadTabItem Header="Tab 2" Content="Item 2" Width="30" Height="18"/>
-                    </controls:RadTabControl.Items>
-                </controls:RadTabControl>
+                <controls:RadListBox  Width="150" x:Name="radListBox">
+                    <controls:RadListBoxItem Content="Australia" />
+                    <controls:RadListBoxItem Content="Brazil" />
+                    <controls:RadListBoxItem Content="Canada" />
+                    <controls:RadListBoxItem Content="China" />
+                    <controls:RadListBoxItem Content="England" />
+                    <controls:RadListBoxItem Content="Germany" />
+                </controls:RadListBox>
             </StackPanel>
 
             <Button Grid.Row="2" Content="VIEW SOURCE..." Click="ButtonViewSource_Click" Background="#FF6F7DFF" Style="{StaticResource ButtonViewSource_Style}"/>
