Move some components in a more appropriate page.

--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/InProgress/InProgress.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/InProgress/InProgress.xaml
@@ -15,6 +15,7 @@
             <local:RadTransitionControl_Demo HorizontalAlignment="Center"/>
             <local:RadWatermarkTextBox_Demo HorizontalAlignment="Center"/>
             <local:RadWindow_demo HorizontalAlignment="Center"/>
+            <local:RadColorPicker_Demo HorizontalAlignment="Center"/>
             <local:RadComboBox_Demo HorizontalAlignment="Center"/>
             <local:RadDocking_Demo HorizontalAlignment="Center"/>
             <local:RadMenu_Demo HorizontalAlignment="Center"/>
