--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Supported/Supported.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Supported/Supported.xaml
@@ -16,6 +16,8 @@
             <local:RadNumericUpDown_Demo HorizontalAlignment="Center"/>
             <local:RadContextMenu_Demo HorizontalAlignment="Center"/>
             <local:RadDockPanel_Demo HorizontalAlignment="Center"/>
+            <local:RadListBox_Demo HorizontalAlignment="Center"/>
+            <local:RadGallery_Demo HorizontalAlignment="Center"/>
         </local:MasonryPanelWithProgressiveLoading>
     </StackPanel>
 </UserControl>
