--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/InProgress/InProgress.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/InProgress/InProgress.xaml
@@ -20,6 +20,9 @@
             <local:RadDocking_Demo HorizontalAlignment="Center"/>
             <local:RadMenu_Demo HorizontalAlignment="Center"/>
             <local:RadRibbonView_Demo HorizontalAlignment="Center"/>
+            <local:RadAlert_Demo HorizontalAlignment="Center"/>
+            <local:RadTreeView_Demo HorizontalAlignment="Center"/>
+            <local:RadGridView_Demo HorizontalAlignment="Center"/>
         </local:MasonryPanelWithProgressiveLoading>
     </StackPanel>
 </UserControl>
