--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/InProgress/RadGridView/RadGridView_Demo.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/InProgress/RadGridView/RadGridView_Demo.xaml
@@ -5,7 +5,7 @@
     xmlns:local="clr-namespace:OpenSilver.Samples.TelerikUI"
     xmlns:controls="using:Telerik.Windows.Controls">
 
-    <ContentControl Style="{StaticResource Card_Style}" Height="500" Width="440">
+    <ContentControl Style="{StaticResource Card_Style}" Height="350" Width="730">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -13,7 +13,7 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <ContentControl Content="RadGridView (native)" Foreground="#FFD59851" Background="#FFBFA383" Style="{StaticResource HeaderControl_Style}"/>
-            <controls:RadGridView x:Name="RadGridView1" Grid.Row="1" Width="400" Height="400" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <controls:RadGridView x:Name="RadGridView1" Grid.Row="1" CustomLayout="True" Width="700" Height="270"  HorizontalAlignment="Center" VerticalAlignment="Center"/> <!--Width="750" Height="400"-->
             <Button Grid.Row="2" Content="VIEW SOURCE..." Click="ButtonViewSource_Click" Background="#FF6F7DFF" Style="{StaticResource ButtonViewSource_Style}"/>
         </Grid>
     </ContentControl>
