--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Controls/RadRichTextBox/RadRichTextBox_Demo.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Controls/RadRichTextBox/RadRichTextBox_Demo.xaml
@@ -1,20 +1,25 @@
 ﻿<UserControl
-    x:Class="OpenSilver.Samples.TelerikUI.RadMap_Demo"
+    x:Class="OpenSilver.Samples.TelerikUI.RadRichTextBox_Demo"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:Telerik.Windows.Controls"
     xmlns:local="clr-namespace:OpenSilver.Samples.TelerikUI">
 
-    <ContentControl Style="{StaticResource Card_Style}" Height="430" Width="400">
+    <ContentControl Style="{StaticResource Card_Style}" Height="210" Width="180">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <ContentControl Content="Rad Map" Foreground="#FFD59851" Background="#FFBFA383" Style="{StaticResource HeaderControl_Style}"/>
+            <ContentControl Content="RadRichTextBox" Foreground="#FFD59851" Background="#FFBFA383" Style="{StaticResource HeaderControl_Style}"/>
             <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <controls:RadMap Width="350" Height="350"/>
+                <!--<controls:RadToggleButton x:Name="BoldButton" 
+                            Content="Bold" 
+                            DataContext="{Binding Commands, ElementName=radRichTextBox}" 
+                            Command="{Binding ToggleBoldCommand}" />-->
+                <!--Commented out because it causes an exception-->
+                <!--<controls:RadRichTextBox x:Name="radRichTextBox" />-->
             </StackPanel>
 
             <Button Grid.Row="2" Content="VIEW SOURCE..." Click="ButtonViewSource_Click" Background="#FF6F7DFF" Style="{StaticResource ButtonViewSource_Style}"/>
