--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/MainPage.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/MainPage.xaml
@@ -29,7 +29,7 @@
                     <StackPanel Margin="0,20,0,0">
                         <StackPanel Orientation="Vertical" Margin="1">
                             <TextBlock x:Name="TitleTextBlock" FontFamily="Segoe UI" TextAlignment="Center" VerticalAlignment="Center" Foreground="#FF00C6D2" FontSize="17">
-                Telerik UI compiled<LineBreak/>with OpenSilver
+                Telerik UI compiled<LineBreak/>with OpenSilver<LineBreak/>[ALPHA]
                             </TextBlock>
                         </StackPanel>
                         <Button Content="All Controls" Click="ButtonControls_Click" Style="{StaticResource FlatButtonStyle}" Background="{x:Null}" Foreground="#FFDDDDDD" HorizontalContentAlignment="Left" FontSize="16" Margin="0,10,0,0" Padding="20,3,3,3"/>
