--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/MainPage.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/MainPage.xaml
@@ -41,7 +41,7 @@
                 <Border.RenderTransform>
                     <TranslateTransform/>
                 </Border.RenderTransform>
-                <Button Click="ButtonToHideOrShowMenu_Click" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent" Padding="0">
+                <Button Click="ButtonToHideOrShowMenu_Click" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent" Style="{StaticResource FlatButtonStyle}" Padding="0">
                     <Image Source="other/MenuIcon.png" Width="50" Height="50" Stretch="Fill"/>
                 </Button>
             </Border>
@@ -72,7 +72,7 @@
         <Grid Grid.Row="3" x:Name="SourceCodePane" Visibility="Collapsed" Background="#FF4A4A4A">
             <TextBlock Text="Loading source code..." Foreground="DarkGray" FontSize="14" Margin="20" HorizontalAlignment="Center" VerticalAlignment="Center" TextWrapping="Wrap"/>
             <Border x:Name="PlaceWhereSourceCodeWillBeDisplayed" Margin="0,10,0,0"/>
-            <Button x:Name="ButtonToCloseSourceCode" Content="X" FontSize="18" FontWeight="Bold" Foreground="LightGray" Background="#FF6C6C6C" HorizontalAlignment="Right" HorizontalContentAlignment="Center" VerticalAlignment="Top" VerticalContentAlignment="Center" Padding="8,2,8,2" Margin="5" Click="ButtonToCloseSourceCode_Click" />
+            <Button x:Name="ButtonToCloseSourceCode" Content="X" FontSize="18" FontWeight="Bold" Foreground="LightGray" Background="#FF6C6C6C" HorizontalAlignment="Right" HorizontalContentAlignment="Center" VerticalAlignment="Top" VerticalContentAlignment="Center" Padding="8,2,8,2" Margin="5" Style="{StaticResource FlatButtonStyle}" Click="ButtonToCloseSourceCode_Click" />
         </Grid>
     </Grid>
 </Page>
