--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/MainPage.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/MainPage.xaml
@@ -6,8 +6,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    
-    <Grid>
+
+    <Grid Background="#FFF0F0F0">
         <Grid.RowDefinitions>
             <RowDefinition x:Name="RowThatContainsTheBanner" Height="Auto"/>
             <RowDefinition x:Name="RowThatContainsThePage" Height="*"/>
